fix gap between 1.4 and 1.4.2 blocks

--- a/src/parts/intro/intro.scss
+++ b/src/parts/intro/intro.scss
@@ -5,7 +5,7 @@
   justify-content: flex-end;
   padding-top: 90px;
   padding-bottom: 5vh;
-  min-height: 50vh;
+  min-height: 75vh;
   @media (min-width: 640px) {
     height: 70vh;
   }
