--- a/src/stylesheets/structures.scss
+++ b/src/stylesheets/structures.scss
@@ -20,8 +20,8 @@
 .structures {
   &__main {
     overflow: hidden;
-    min-height: calc(100vh - 150px);
-    margin-top: -135px;
+    min-height: calc(100vh - 152px);
+    margin-top: -130px;
   }
   &__text {
     width: 459px;
